fix(frontend): adjust styling for better UI exp and customize scrollbar

--- a/app/frontend/app/[locale]/globals.css
+++ b/app/frontend/app/[locale]/globals.css
@@ -7,6 +7,24 @@
   --bg-rgb: 0, 0, 0;
 }
 
+/* Custom scrollbar */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--bg-rgb));
